--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,16 @@
-nav {
-    background-color: rgb(206, 206, 206);
+#background {
+    background-image: url(img/bliss.jpg);
+    height: 100vh;
+    width: 100%;
+    background-size: cover;
+    background-position: center center;
+    position: fixed;
+    top: 0;
+    z-index: -1;
 }
   body {
     font-family: Arial, sans-serif;
+    margin: 0;
 }
 h2 {
     color: blue;
@@ -10,6 +18,9 @@ h2 {
 h1 {
     color: blue;
 }
-h3.nounderline {
+p {
+    background-color: rgb(164, 164, 164)
+}
+a.nounderline {
     text-decoration: none;
 }
