--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 #background {
-    background-image: url(img/bliss.jpg);
+    background-image: url(img/bliss2.jpg);
     height: 100vh;
     width: 100%;
     background-size: cover;
@@ -14,12 +14,13 @@
 }
 h2 {
     color: blue;
+    background-color: rgba(200,200,200,0.5);
 }
 h1 {
-    color: blue;
+    color: rgb(0, 0, 152);
 }
 p {
-    background-color: rgb(164, 164, 164)
+    background-color: rgba(164,164,164,0.8);
 }
 a.nounderline {
     text-decoration: none;
