--- a/styles.css
+++ b/styles.css
@@ -15,13 +15,47 @@
 h2 {
     color: blue;
     background-color: rgba(200,200,200,0.5);
+    font-size:18pt;
 }
 h1 {
     color: rgb(0, 0, 152);
 }
 p {
-    background-color: rgba(164,164,164,0.8);
+    font-size: 12pt;
+    background-color: rgba(164,164,164,0.7);
+    padding: 20px;
+    width: 75%;
+    justify-content: center;
 }
-a.nounderline {
+li {
+    font-size: 12pt;
+}
+img {
+    background-color: rgb(44, 44, 44);
+    padding-top: 40px;
+    padding-right: 30px;
+    padding-bottom: 40px;
+    padding-left: 30px;
+}
+.container {
+  display: flex;
+}
+.container div {
+  background-color: #f1f1f1;
+  margin: 10px;
+  padding: 20px;
+  font-size: 30px;
+}
+.nounderline {
     text-decoration: none;
+}
+.peace {
+    padding-top: 10px;
+    padding-right: 0px;
+    padding-bottom: 0px;
+    padding-left: 10px;
+    background-color: rgba(0,0,0,0)
+}
+.indent {
+    text-indent: 20px
 }
